--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "http://YaGen.github.io/game_of_life_test_task",
   "scripts": {
     "start": "parcel src/index.html --open",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url ./",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
